[package]
name = "dhd"
version = "0.1.0"
authors = ["Eric Mark Martin <ericmarkmartin@gmail.com>"]
edition = "2018"

[lib]

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[dependencies]
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", default-features=false, features=["redis_pool"] }
juniper = "0.14.2"
juniper_rocket = "0.5.2"
difference = "2.0.0"
