[package]
name = "dhd_client"
version = "0.1.0"
authors = ["Eric Mark Martin <ericmarkmartin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhd_core = { path = "../dhd_core" }
clap = "2.33.0"
graphql_client = "0.9.0"
crc = "1.8.1"
serde = "1.0.107"

[dependencies.reqwest]
version = "0.10.4"
features = ["json", "blocking"]
